--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dhanush.S - Web Developer & Designer Portfolio</title>
+    <title>Dhanush S - Portfolio</title>
     <meta name="description" content="Creative portfolio of Dhanush.S - Web Developer, Designer, and Automation Specialist. Explore my projects in web development, design, Python, and n8n automation." />
     <meta name="author" content="Dhanush.S" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-
-    <meta property="og:title" content="Dhanush.S - Web Developer & Designer" />
-    <meta property="og:description" content="Creative portfolio showcasing web development, design, and automation projects" />
-    <meta property="og:type" content="website" />
-  
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dhanush.S - Portfolio" />
+    <link rel="shortcut icon" type="image" href="/src/assets/fprofile.png">
     
   </head>
 
