add vercel.json file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image" href="/src/assets/fprofile.png">
-    
+    <meta property="og:title" content="Dhanush.S - Web Developer & Designer" />
+    <meta property="og:description" content="Creative portfolio showcasing web development, design, and automation projects" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body>
