Update Open Graph title for portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Dhanush.S - Web Developer & Designer" />
+    <meta property="og:title" content="Dhanush.S - Fullstack Developer & Designer" />
     <meta property="og:description" content="Creative portfolio showcasing web development, design, and automation projects" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Dhanush.S - Portfolio" />
